--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avida-ED 4.0.26</title>
+    <title>Avida-ED 4.0.27</title>
     <meta charset='utf-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <style>
@@ -38,7 +38,7 @@
     <span id="http://stackoverflow.com/questions/20828799/creating-a-splash-page-in-html5"></span>
     <div id='splash' style='display: none;'>
       <div align='center'>
-        <h1>Avida-ED 4.0.26 Beta Testing is loading . . .</h1>
+        <h1>Avida-ED 4.0.27 Beta Testing is loading . . .</h1>
         <img src='images/Avida-ED-icon.png' /><br />
         <img src='images/AvidaGrid.gif' />
       </div>
@@ -142,8 +142,8 @@
         </div>
 
        <div id='RtSideToggleButtons'>
-          <input id='StatsButton' type='button' class='toggleLftButton' value='Stats' onclick='av.ptd.rightInfoPanelToggleButton(this)'/>
-          <input id='SetupButton' type='button' class='toggleRitButton' value='Setup' onclick='av.ptd.rightInfoPanelToggleButton(this)'/>
+          <input id='SetupButton' type='button' class='toggleLftButton activeBtn' value='Setup' onclick='av.ptd.rightInfoPanelToggleButton(this)'/>
+          <input id='StatsButton' type='button' class='toggleRitButton' value='Stats' onclick='av.ptd.rightInfoPanelToggleButton(this)'/>
         </div>
 
         <div id='ritePnlBtnHolder'>
@@ -1586,7 +1586,7 @@
           <span class='aboutAvidaEDcloseHldr'>
             <button id='aboutAvidaEDcloseButton' onclick='av.ui.aboutAvidaED_Close();'>Close</button>
           </span>
-          <h2 id='aboutAvidaEDtitle'>Avida-ED 4.0.26 Beta</h2>
+          <h2 id='aboutAvidaEDtitle'>Avida-ED 4.0.27 Beta</h2>
           <span class='aboutAvidaEDcloseHldr'>
           </span>
         </div>
