moved code to remove the splash screen - too slow on server

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body id='main_display' class='claro'>
 
     <span id="http://stackoverflow.com/questions/20828799/creating-a-splash-page-in-html5"></span>
-    <div id='splash' style='display: none;'>
+    <div id='splash' style='display: block;'>
       <div align='center'>
         <br />
         <h1>Avida-ED 4.0.29 Beta Testing is loading . . .</h1>
