--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
       @import 'menubar.css';
       @import 'lib/dragula/dragula-v3.7.2.min.css';
     </style>
+    <script type="text/javascript">
+  //------------------------------------------------------------------------------ remove splash screen a few seconds --
+  setTimeout(function() {
+  // turn off splash screen after delay
+        document.getElementById("splash").style.display="none";
+        //$('#splash').remove(); //hides splash screen.
+        console.log('index: delay 1 milliseconds - - - - - - - - - - - - - - - - - - - - - - - Turn off splash screen');
+        // Worked on a better splash screen gif. Used licecap, an application on the Mac to record the gif.
+        // Then used http://gifmaker.me/reverser/ to make a gif in reverse time order. Then Wesley used gifsicle
+        // to combine the forward and reverse gif.
+        document.getElementById("appReloadModelID").style.display="none";
+  //end turn off splash screen
+  }, 1); // 3000 milliseconds = 3 seconds
+
+  // 
+  //----------------------------------------------- show message to reload avida if it has not loaded for 121 seconds --
+    </script>
   </head>
 
   <body id='main_display' class='claro'>
