--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avida-ED 4.0.30</title>
+    <title>Avida-ED 4.0.31</title>
     <meta charset='utf-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <style>
@@ -36,10 +36,10 @@
   <body id='main_display' class='claro'>
 
     <span id="http://stackoverflow.com/questions/20828799/creating-a-splash-page-in-html5"></span>
-    <div id='splash' style='display: none;'>
+    <div id='splash' style='display: block;'>
       <div align='center'>
         <br />
-        <h1>Avida-ED 4.0.30 Beta Testing is loading . . .</h1>
+        <h1>Avida-ED 4.0.31 Beta Testing is loading . . .</h1>
         <img src='images/Avida-ED-logo.png' />&nbsp;&nbsp;&nbsp;&nbsp;
         <img src='images/avidaGrow_15.gif' />
       </div>
@@ -1588,7 +1588,7 @@
           <span class='aboutAvidaEDcloseHldr'>
             <button id='aboutAvidaEDcloseButton' onclick='av.ui.aboutAvidaED_Close();'>Close</button>
           </span>
-          <h2 id='aboutAvidaEDtitle'>Avida-ED 4.0.30 Beta</h2>
+          <h2 id='aboutAvidaEDtitle'>Avida-ED 4.0.31 Beta</h2>
           <span class='aboutAvidaEDcloseHldr'>
           </span>
         </div>
