--- a/index.html
+++ b/index.html
@@ -2082,7 +2082,7 @@
   // gets an error message. claims document.getElementById("splash") is null unless the JQuery ready function is used. 
   // 
   jQuery(document).ready(function(){
-    setTimeout(function() {
+//    setTimeout(function() {
     // turn off splash screen after delay
           var domSplash = document.getElementById("splash");
           console.log('av.ui.delay =', av.ui.delay, '; domSplash is', domSplash);
@@ -2093,7 +2093,7 @@
           // to combine the forward and reverse gif.
           document.getElementById("appReloadModelID").style.display="none";
     //end turn off splash screen
-    }, av.ui.delay); // 3000 milliseconds = 3 seconds
+//    }, av.ui.delay); // 3000 milliseconds = 3 seconds
   });
   // 
   //----------------------------------------------- show message to reload avida if it has not loaded for 121 seconds --
