added text back to splash screen

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id='splash'>
       <div align='center'>
         <br />
-        <h1 style="display:none">Avida-ED 4.0.32 Beta Testing is loading . . .</h1>
+        <h1>Avida-ED 4.0.32 Beta Testing is loading . . .</h1>
         <img src='images/Avida-ED-logo.png' />&nbsp;&nbsp;&nbsp;&nbsp;
         <img src='images/avidaGrow_15.gif' />
       </div>
