--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avida-ED 4.0.32</title>
+    <title>Avida-ED 4.0.33</title>
     <meta charset='utf-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <style>
@@ -40,7 +40,7 @@
     <div id='splash'>
       <div align='center'>
         <br />
-        <h1>Avida-ED 4.0.32 Beta Testing is loading . . .</h1>
+        <h1>Avida-ED 4.0.33 Beta is loading . . .</h1>
         <img src='images/Avida-ED-logo.png' />&nbsp;&nbsp;&nbsp;&nbsp;
         <img src='images/avidaGrow_15.gif' />
       </div>
@@ -196,7 +196,7 @@
             <button id='showTextDebugButton' type='button' value='Big Text'>Big Text</button>
           </div>
           <div id='developmentToggleDiv'>
-            <input id='developmentToggle' class='devoCammo' type='button' value=' in Development View ' onclick='av.ui.toggleDevelopmentDisplays()' />
+            <input id='developmentToggle' class='devoCammo' type='button' value='Devo View' onclick='av.ui.toggleDevelopmentDisplays()' />
           </div>
 
         </div><span id='freezerSection_end' class='display_none'></span>
@@ -1318,13 +1318,13 @@
       <!-- Modal content -->
       <div class="modal-content" >
         <div class="modal-header">
-          <h3>Stand alone version of Avida-ED 4.0.17 Beta Testing</h3>
+          <h3>Stand alone version of Avida-ED 4.0.17 Beta</h3>
         </div> 
         <div class="modal-body">
           <h2>For working where there is no internet access: No working Avida-ED 4 versions for off-line use at this time.</h2>
           <ul>
             <li class="slim"><a href="pkgs/Avida-ED-Web-PC_2016_0918.exe" target='_blank'>Avida-ED Windows installer for self-hosted version 2016_0918</a></li>
-            <li><a href="pkgs/Avida-ED_Server_Avida-ED.app.zip" target='_blank'>Avida-ED Beta Testing for Mac OS 10.6 and above</a></li>
+            <li><a href="pkgs/Avida-ED_Server_Avida-ED.app.zip" target='_blank'>Avida-ED Beta for Mac OS 10.6 and above</a></li>
             <ul>
               <li>Unzip the file once it is downloaded</li>
               <li>Move the file ‘Avida-ED Web.app’ to the Applications Folder</li>
@@ -1589,7 +1589,7 @@
           <span class='aboutAvidaEDcloseHldr'>
             <button id='aboutAvidaEDcloseButton' onclick='av.ui.aboutAvidaED_Close();'>Close</button>
           </span>
-          <h2 id='aboutAvidaEDtitle'>Avida-ED 4.0.32 Beta</h2>
+          <h2 id='aboutAvidaEDtitle'>Avida-ED 4.0.33 Beta</h2>
           <span class='aboutAvidaEDcloseHldr'>
           </span>
         </div>
